--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Title
+title: South View Primary School
 url: ""
 favicon: /images/favicon-isomer.ico
 colors:
@@ -16,7 +16,7 @@ colors:
     - title: media-color-five
       color: "#00838f"
 resources_name: resource
-description: An Isomer site of the Singapore Government
+description: ""
 permalink: none
 baseurl: ""
 exclude:
