--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,5 +2,6 @@ collections:
   about-us:
     output: true
     order:
+      - Teaching Staff and Allied Educators.md
       - Non Teaching Staff.md
       - SVPS School Virtual Tour.md
