--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - School Leaders & Key Personnel.md
       - Teaching Staff and Allied Educators.md
       - Non Teaching Staff.md
       - SVPS School Virtual Tour.md
