--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Principal's Message 2022.md
       - Our Beliefs.md
       - Our Identity.md
       - School Leaders & Key Personnel.md
