--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,4 +2,5 @@ collections:
   departments:
     output: true
     order:
+      - Student Development.md
       - Learners Profile and Education Support.md
