--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,5 +2,6 @@ collections:
   departments:
     output: true
     order:
+      - Student Development/.keep
       - Student Development.md
       - Learners Profile and Education Support.md
