--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Student Development/Welcome Back To School.md
       - Student Development/Student Development.md
       - Student Development/.keep
       - Learners Profile and Education Support.md
