--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -2,4 +2,5 @@ collections:
   student-development:
     output: true
     order:
+      - Welcome Back To School.md
       - Student Development.md
