--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -2,5 +2,6 @@ collections:
   student-development:
     output: true
     order:
+      - P1 Transition Programme/.keep
       - Welcome Back To School.md
       - Student Development.md
