--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -2,6 +2,8 @@ collections:
   student-development:
     output: true
     order:
+      - P1 Transition Programme/Information regarding starting Primary 1 in
+        2022.md
       - P1 Transition Programme/P1 Transition Programme.md
       - P1 Transition Programme/.keep
       - Welcome Back To School.md
