--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -2,6 +2,8 @@ collections:
   student-development:
     output: true
     order:
+      - "P1 Transition Programme/2022 Primary 1 #StayHomeStayCurious
+        Challenges.md"
       - P1 Transition Programme/School related Services.md
       - P1 Transition Programme/Students with Special Needs.md
       - P1 Transition Programme/Information regarding starting Primary 1 in
