--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -2,6 +2,7 @@ collections:
   student-development:
     output: true
     order:
+      - P1 Transition Programme/SVPS Student Portal.md
       - "P1 Transition Programme/2022 Primary 1 #StayHomeStayCurious
         Challenges.md"
       - P1 Transition Programme/School related Services.md
