--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -2,6 +2,7 @@ collections:
   student-development:
     output: true
     order:
+      - P1 Transition Programme/Useful Links & Articles.md
       - P1 Transition Programme/P1 Orientation.md
       - P1 Transition Programme/SVPS School Virtual Tour.md
       - P1 Transition Programme/SVPS Student Portal.md
