--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Pupil well being/.keep
       - Pupil Well Being.md
       - Character & Citizenship Education.md
       - Student Development.md
