--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Pupil well being/Use of Photographs and Videos for School Publicity.md
       - Pupil well being/Pupil Well Being.md
       - Pupil well being/.keep
       - Character & Citizenship Education.md
