--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,8 @@ collections:
   departments:
     output: true
     order:
+      - PE Education, CCA & Aesthetics/Physical & Health Education, CCA &
+        Aesthetics.md
       - PE Education, CCA & Aesthetics/.keep
       - CIE Technology/Sustaining Gaia through Project Work.md
       - CIE Technology/Curriculum, Innovation & Educational Technology.md
