--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - PE Education, CCA & Aesthetics/Programme for Active Learning (PAL).md
       - PE Education, CCA & Aesthetics/Physical & Health Education, CCA &
         Aesthetics.md
       - PE Education, CCA & Aesthetics/.keep
