--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,7 +2,7 @@ collections:
   departments:
     output: true
     order:
-      - Example Title.md
+      - Science.md
       - Mother Tongue Languages.md
       - PE Education, CCA & Aesthetics/.keep
       - PE Education, CCA & Aesthetics/Physical & Health Education, CCA &
