--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - English Language.md
       - Mathematics.md
       - Science.md
       - Mother Tongue Languages.md
