--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: South View Primary School
 url: ""
 favicon: /images/favicon-isomer.ico
 colors:
-  primary-color: "#efef0b"
+  primary-color: "#ecdb00"
   secondary-color: "#032d84"
   media-colors:
     - title: media-color-one
