--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -10,13 +10,13 @@ collections:
       - Mathematics.md
       - Science.md
       - Mother Tongue Languages.md
-      - PE Education, CCA & Aesthetics/.keep
-      - PE Education, CCA & Aesthetics/Physical & Health Education, CCA &
+      - Physical & Health Education/.keep
+      - Physical & Health Education/Physical & Health Education, CCA &
         Aesthetics.md
-      - PE Education, CCA & Aesthetics/Love Dance, Love Life!.md
-      - PE Education, CCA & Aesthetics/GastroChef With A Cultural Twist.md
-      - PE Education, CCA & Aesthetics/Values in Action (VIA) in CCA.md
-      - PE Education, CCA & Aesthetics/Programme for Active Learning (PAL).md
+      - Physical & Health Education/Love Dance, Love Life!.md
+      - Physical & Health Education/GastroChef With A Cultural Twist.md
+      - Physical & Health Education/Values in Action (VIA) in CCA.md
+      - Physical & Health Education/Programme for Active Learning (PAL).md
       - CIE Technology/Sustaining Gaia through Project Work.md
       - CIE Technology/Curriculum, Innovation & Educational Technology.md
       - CIE Technology/.keep
