--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ links:
         url: /departments/science
       - title: Mother Tongue Languages
         url: /departments/mother-tongue-languages
-      - title: PE, CCA & Aesthetics
+      - title: Physical & Health Education
         url: /departments/physical-n-health-education-cca-n-aesthetics
       - title: CIE Technology
         url: /departments/curriculum-innovation-n-educational-technology
