--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,3 +40,16 @@ links:
         url: /departments/student-development
       - title: Learners Profile and Education
         url: /departments/learners-profile-and-education-support
+  - title: Signature Programmes
+    url: /signature-programmes
+    sublinks:
+      - title: Love Dance, Love Life!
+        url: /departments/physical-n-health-education-cca-n-aesthetics/love-dance-love-life
+      - title: GastroChef
+        url: /departments/physical-n-health-education-cca-n-aesthetics/gastrochef-with-a-cultural-twist
+      - title: P1 Transition Programme
+        url: /departments/student-development/p1-transition-programme
+      - title: P6 Transition Programme
+        url: /departments/student-development/p6-transition-programme
+      - title: Sustaining Gaia through PW
+        url: /departments/curriculum-innovation-n-educational-technology/sustaining-gaia-through-project-work
