--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -2,6 +2,7 @@ collections:
   co-curricular-activities:
     output: true
     order:
+      - Scouts.md
       - Student Leadership.md
       - The Oasis.md
       - Tink!SV.md
