--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -2,6 +2,7 @@ collections:
   co-curricular-activities:
     output: true
     order:
+      - Netball.md
       - Floorball.md
       - Orators Club.md
       - Robotics Club.md
