--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -2,6 +2,7 @@ collections:
   co-curricular-activities:
     output: true
     order:
+      - Chinese Dance.md
       - Chinese Orchestra.md
       - Choir.md
       - Football.md
