--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -53,3 +53,50 @@ links:
         url: /departments/student-development/p6-transition-programme
       - title: Sustaining Gaia through PW
         url: /departments/curriculum-innovation-n-educational-technology/sustaining-gaia-through-project-work
+  - title: Co-Curricular Activities
+    url: /co-curricular-activities
+    sublinks:
+      - title: Art Club
+        url: /co-curricular-activities/art-club
+      - title: Badminton
+        url: /co-curricular-activities/badminton
+      - title: Boys' Brigade & Girls' Brigade
+        url: /co-curricular-activities/boys-brigade-n-girls-brigade
+      - title: Chinese Dance
+        url: /co-curricular-activities/chinese-dance
+      - title: Chinese Orchestra
+        url: /co-curricular-activities/chinese-orchestra
+      - title: Choir
+        url: /co-curricular-activities/choir
+      - title: Football
+        url: /co-curricular-activities/football
+      - title: Floorball
+        url: /co-curricular-activities/floorball
+      - title: Indian Dance
+        url: /co-curricular-activities/indian-dance
+      - title: Library
+        url: /co-curricular-activities/library
+      - title: Malay Dance
+        url: /co-curricular-activities/malay-dance
+      - title: Media Club
+        url: /co-curricular-activities/media-club
+      - title: Multi-Sports
+        url: /co-curricular-activities/multi-sports
+      - title: Netball
+        url: /co-curricular-activities/netball
+      - title: Orators Club
+        url: /co-curricular-activities/orators-club
+      - title: Robotics Club
+        url: /co-curricular-activities/robotics-club
+      - title: Science Club
+        url: /co-curricular-activities/science-club
+      - title: Scouts
+        url: /co-curricular-activities/scouts
+      - title: Student Leadership
+        url: /co-curricular-activities/student-leadership
+      - title: The Oasis
+        url: /co-curricular-activities/the-oasis
+      - title: Tink!SV
+        url: /co-curricular-activities/tink-sv
+      - title: VIA in CCA
+        url: co-curricular-activities/via-in-cca
