--- a/_our-partners/collection.yml
+++ b/_our-partners/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-partners:
     output: true
     order:
+      - Family Matters @ SV.md
       - Alumni Association/.keep
       - Alumni Association/Alumni Association.md
       - Alumni Association/Organisation Chart.md
