--- a/_about-svpa/collection.yml
+++ b/_about-svpa/collection.yml
@@ -2,5 +2,6 @@ collections:
   about-svpa:
     output: true
     order:
+      - Organisation Chart.md
       - Join Us.md
       - Contact & Feedback.md
