--- a/_our-partners/collection.yml
+++ b/_our-partners/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-partners:
     output: true
     order:
+      - Parents Association/Join Us.md
       - Parents Association/Parents Association.md
       - Parents Association/.keep
       - Family Matters @ SV.md
