--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -100,3 +100,14 @@ links:
         url: /co-curricular-activities/tink-sv
       - title: VIA in CCA
         url: co-curricular-activities/via-in-cca
+  - title: Our Partners
+    url: /our-partners/school-advisory-committee
+    sublinks:
+      - title: School Advisory Committee
+        url: /our-partners/school-advisory-committee
+      - title: Parents Association
+        url: /our-partners/parents-association
+      - title: Family Matters @ SV
+        url: /our-partners/family-matters-at-sv
+      - title: Alumni Association
+        url: /our-partners/alumni-association
