--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,5 +2,6 @@ collections:
   info-hub:
     output: true
     order:
+      - Contact Information.md
       - Terms of Use.md
       - Privacy Statement.md
