--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - E Forms.md
       - Contact Information.md
       - Terms of Use.md
       - Privacy Statement.md
