--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - SLS and Student Icon Matters/Student iCON FAQs.md
       - "SLS and Student Icon Matters/SLS: Getting Started.md"
       - SLS and Student Icon Matters/.keep
       - Student Learning Space and Student iCON matters (General).md
