--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - Operations.md
       - Calendar & Schedules.md
       - SLS and Student Icon Matters/.keep
       - "SLS and Student Icon Matters/SLS: Getting Started.md"
