--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - MOE Sexuality Education in Schools.md
       - Adminstration/.keep
       - Adminstration/P1 Registration Exercise.md
       - Adminstration/Communication.md
