--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: South View Primary School
 url: https://askgov.sg
 favicon: /images/crest.gif
 colors:
-  primary-color: "#032d84"
-  secondary-color: "#aca018"
+  primary-color: "#0641ba"
+  secondary-color: "#160665"
   media-colors:
     - title: media-color-one
       color: "#000000"
