--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -20,13 +20,13 @@ collections:
       - CIE Technology/Sustaining Gaia through Project Work.md
       - CIE Technology/Curriculum, Innovation & Educational Technology.md
       - CIE Technology/.keep
-      - Pupil well being/.keep
-      - Pupil well being/Pupil Well Being.md
-      - Pupil well being/MOE Sexuality Education in Schools.md
-      - Pupil well being/Counselling.md
-      - Pupil well being/Modes of Communication with the School.md
-      - Pupil well being/Parents Gateway.md
-      - Pupil well being/Use of Photographs and Videos for School Publicity.md
+      - Pupil Well Being/.keep
+      - Pupil Well Being/Pupil Well Being.md
+      - Pupil Well Being/MOE Sexuality Education in Schools.md
+      - Pupil Well Being/Counselling.md
+      - Pupil Well Being/Modes of Communication with the School.md
+      - Pupil Well Being/Parents Gateway.md
+      - Pupil Well Being/Use of Photographs and Videos for School Publicity.md
       - Character & Citizenship Education.md
       - Student Development.md
       - Learners Profile and Education Support.md
