--- a/_student-development/collection.yml
+++ b/_student-development/collection.yml
@@ -16,4 +16,4 @@ collections:
       - P1 Transition Programme/Students with Special Needs.md
       - P1 Transition Programme/Information regarding starting Primary 1 in
         2023.md
-      - P6 Transition Programme.md
+      - Primary 6 Transition Programme – Ready, Sec, Go!.md
