--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -6,7 +6,7 @@ collections:
       - Weekly Notification/Weekly Notification.md
       - Weekly Notification/Archived Letters.md
       - Calendar & Schedules.md
-      - School Related Services.md
+      - School–related Services.md
       - Student Care Centre.md
       - School Rules.md
       - Student Learning Space and Student iCON matters (General).md
