--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - School Related Services/Student Care Centre.md
       - School Related Services/School–related Services.md
       - School Related Services/.keep
       - Weekly Notification/.keep
