--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -11,7 +11,7 @@ collections:
       - Calendar & Schedules.md
       - School Rules.md
       - Student Learning Space and Student iCON matters (General).md
-      - E Forms.md
+      - E–Forms.md
       - "School Home Partnership: Homework Policy.md"
       - MOE Sexuality Education in Schools.md
       - Adminstration/.keep
