--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -17,6 +17,8 @@ collections:
       - Adminstration/P1 Registration Exercise.md
       - Adminstration/Communication.md
       - Operations.md
+      - SLS and Student Icon Matters/Student Learning Space and Student iCON
+        matters (General).md
       - SLS and Student Icon Matters/.keep
       - "SLS and Student Icon Matters/SLS: Getting Started.md"
       - "SLS and Student Icon Matters/SLS: Password Reset.md"
