--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -20,9 +20,9 @@ collections:
       - "School Home Partnership: Homework Policy.md"
       - MOE Sexuality Education in Schools.md
       - School Rules.md
-      - Adminstration/.keep
-      - Adminstration/P1 Registration Exercise.md
-      - Adminstration/Communication.md
+      - P1 Registration/.keep
+      - P1 Registration/P1 Registration Exercise.md
+      - P1 Registration/Communication.md
       - Operations.md
       - Contact Information.md
       - Terms of Use.md
