--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ links:
   - title: About Us
     url: /about-us/principals-message-2022
     sublinks:
-      - title: Principal's Message 2022
-        url: /about-us/principals-message-2022
+      - title: SVPS Message for 2023
+        url: /about-us/South-View-Primary-School-Message-for-2023
       - title: Our Beliefs
         url: /about-us/our-beliefs
       - title: Our Identity
