--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ links:
         url: /about-us/our-identity
       - title: School Leaders & Key Personnel
         url: /about-us/school-leaders-n-key-personnel
-      - title: Teaching Staff
-        url: /about-us/teaching-staff-and-allied-educators
+      - title: Teaching Staff, AED and SEN
+        url: /about-us/teaching-staff-aed-and-sen
       - title: Non Teaching Staff
         url: /about-us/non-teaching-staff
       - title: SVPS School Virtual Tour
