--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -6,6 +6,6 @@ collections:
       - Our Beliefs.md
       - Our Identity.md
       - School Leaders & Key Personnel.md
-      - Teaching Staff, Allied Educators and SEN Officers.md
+      - Teaching Staff, AED and SEN.md
       - Non Teaching Staff.md
       - SVPS School Virtual Tour.md
