--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -142,3 +142,6 @@ links:
         url: /info-hub/terms-of-use
       - title: Privacy Statement
         url: /info-hub/privacy-statement
+  - title: MOE Kindergarten @ South_View
+    url: /MOE Kindergarten @ South_View
+    sublinks: []
