--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -143,5 +143,5 @@ links:
       - title: Privacy Statement
         url: /info-hub/privacy-statement
   - title: MOE Kindergarten
-    url: /MOE-Kindergarten/MOE Kindergarten-@-South_View
+    url: /MOE-Kindergarten/MOE Kindergarten-at-South_View
     sublinks: []
