--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,8 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-remote-theme
-staging: https://moe-southviewpri-staging.netlify.app
-prod: https://moe-southviewpri-prod.netlify.app
+staging: https://staging.d2pxaxv584b5qg.amplifyapp.com
+prod: https://master.d2pxaxv584b5qg.amplifyapp.com
 shareicon: /images/crest.gif
 is_government: false
 facebook-pixel: ""
