--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: South View Primary School
-url: https://www.southviewpri.moe.edu.sg
+url: https://moe-southviewpri-staging.netlify.app
 favicon: /images/crest.gif
 colors:
   primary-color: "#0641ba"
