--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -37,7 +37,7 @@ links:
       - title: CCE
         url: /departments/character-n-citizenship-education
       - title: Student Development
-        url: /departments/student-development
+        url: /student-development/
       - title: Learners Profile and Education
         url: /departments/learners-profile-and-education-support
   - title: Signature Programmes
