--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -126,8 +126,8 @@ links:
         url: /departments/pupil-well-being/moe-sexuality-education-in-schools
       - title: Administration
         url: /info-hub/administration/p1-registration-exercise
-      - title: Operations
-        url: /info-hub/operations
+      - title: Road Safety and Security
+        url: /info-hub/road-safety-and-security
       - title: Calendar / Schedules
         url: /info-hub/calendar-schedules
       - title: SLS & Student iCON Matters
