--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Student Development.md
       - Departments.md
       - English Language/.keep
       - English Language/English Language.md
