--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -122,8 +122,8 @@ links:
         url: /info-hub/school-rules
       - title: MOE Sexuality Education
         url: /departments/pupil-well-being/moe-sexuality-education-in-schools
-      - title: Administration
-        url: /info-hub/administration/p1-registration-exercise
+      - title: P1 Registration
+        url: /info-hub/p1-registration/p1-registration-exercise
       - title: Road Safety and Security
         url: /info-hub/road-safety-and-security
       - title: Calendar / Schedules
