--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,6 +17,8 @@ links:
         url: /about-us/non-teaching-staff
       - title: SVPS School Virtual Tour
         url: https://4d.silvrcraft.com/svps360/
+      - title: School Rules
+        url: /about-us/school-rules
   - title: Departments
     url: /departments
     sublinks:
