--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: South View Primary School
+title: Sitemap
 url: https://moe-southviewpri-staging.netlify.app
 favicon: /images/crest.gif
 colors:
