--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -14,7 +14,7 @@ collections:
       - Indian Dance.md
       - Library.md
       - Malay Dance.md
-      - Media Club.md
+      - Media SV.md
       - Multi Sports.md
       - Netball.md
       - Orators Club.md
