--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -6,7 +6,7 @@ collections:
       - Art Club.md
       - Badminton.md
       - Boys' Brigade & Girls' Brigade.md
-      - Chinese Dance.md
+      - Cultural Dance.md
       - Chinese Orchestra.md
       - Choir.md
       - Floorball.md
