--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -64,8 +64,8 @@ links:
         url: /co-curricular-activities/badminton
       - title: Boys' Brigade & Girls' Brigade
         url: /co-curricular-activities/boys-brigade-n-girls-brigade
-      - title: Chinese Dance
-        url: /co-curricular-activities/chinese-dance
+      - title: Cultural Dance
+        url: /co-curricular-activities/cultural-dance
       - title: Chinese Orchestra
         url: /co-curricular-activities/chinese-orchestra
       - title: Choir
