--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -134,3 +134,5 @@ links:
         url: /info-hub/terms-of-use
       - title: Privacy Statement
         url: /info-hub/privacy-statement
+  - title: MOE Kindergarten
+    collection: moe-kindergarten
