--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -55,7 +55,7 @@ links:
         url: /student-development/primary-6-transition-programme-ready-sec-go/
       - title: Sustaining Gaia through PW
         url: /signature-programmes/sustaining-gaia-through-project-work/
-  - title: Co-Curricular Activities
+  - title: CCAs
     url: /co-curricular-activities
     sublinks:
       - title: Art Club
