--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -2,6 +2,7 @@ collections:
   co-curricular-activities:
     output: true
     order:
+      - Sports & Games/Badminton.md
       - Sports & Games/.keep
       - Clubs & Societies/Library.md
       - Clubs & Societies/Media@SV.md
