--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -2,6 +2,7 @@ collections:
   co-curricular-activities:
     output: true
     order:
+      - Sports & Games/Multi Sports.md
       - Sports & Games/Netball.md
       - Sports & Games/Football.md
       - Sports & Games/Badminton.md
