--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -2,6 +2,7 @@ collections:
   co-curricular-activities:
     output: true
     order:
+      - Uniformed Groups/Boys' Brigade & Girls' Brigade.md
       - Uniformed Groups/.keep
       - Sports & Games/Multi Sports.md
       - Sports & Games/Netball.md
