--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -2,6 +2,7 @@ collections:
   co-curricular-activities:
     output: true
     order:
+      - Visual & Performing Arts/Choir.md
       - Visual & Performing Arts/Chinese Orchestra.md
       - Visual & Performing Arts/Cultural Dance.md
       - Visual & Performing Arts/Art Club.md
