--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -10,6 +10,7 @@ collections:
       - Uniformed Groups/Scouts.md
       - Uniformed Groups/Boys' Brigade & Girls' Brigade.md
       - Uniformed Groups/.keep
+      - Sports & Games/Floorball.md
       - Sports & Games/Multi Sports.md
       - Sports & Games/Netball.md
       - Sports & Games/Football.md
