--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Co Curricular Activities.md
       - Clubs & Societies/.keep
       - Clubs & Societies/Library.md
-      - Clubs & Societies/Media@SV.md
+      - Clubs & Societies/Media Club.md
       - Clubs & Societies/Orators Club.md
       - Clubs & Societies/Robotics Club.md
       - Clubs & Societies/Science Club.md
