--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -18,6 +18,7 @@ collections:
       - Uniformed Groups/.keep
       - Uniformed Groups/Boys' Brigade & Girls' Brigade.md
       - Uniformed Groups/Scouts.md
+      - Visual & Performing Arts/Chinese Dance.md
       - Visual & Performing Arts/.keep
       - Visual & Performing Arts/Art Club.md
       - Visual & Performing Arts/Cultural Dance.md
