--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -58,38 +58,14 @@ links:
   - title: CCAs
     url: /co-curricular-activities
     sublinks:
-      - title: Art Club
-        url: /co-curricular-activities/art-club
-      - title: Badminton
-        url: /co-curricular-activities/badminton
-      - title: Boys' Brigade & Girls' Brigade
-        url: /co-curricular-activities/boys-brigade-n-girls-brigade
-      - title: Cultural Dance
-        url: /co-curricular-activities/cultural-dance
-      - title: Chinese Orchestra
-        url: /co-curricular-activities/chinese-orchestra
-      - title: Choir
-        url: /co-curricular-activities/choir
-      - title: Floorball
-        url: /co-curricular-activities/floorball
-      - title: Football
-        url: /co-curricular-activities/football
-      - title: Library
+      - title: Clubs & Societies
         url: /co-curricular-activities/library
-      - title: Media Club
-        url: /co-curricular-activities/media-club
-      - title: Multi-Sports
-        url: /co-curricular-activities/multi-sports
-      - title: Netball
-        url: /co-curricular-activities/netball
-      - title: Orators Club
-        url: /co-curricular-activities/orators-club
-      - title: Robotics Club
-        url: /co-curricular-activities/robotics-club
-      - title: Science Club
-        url: /co-curricular-activities/science-club
-      - title: Scouts
-        url: /co-curricular-activities/scouts
+      - title: Sports & Games
+        url: /co-curricular-activities/badminton
+      - title: Uniformed Groups
+        url: /co-curricular-activities/boys-brigade-n-girls-brigade
+      - title: Visual & Performing Arts
+        url: /co-curricular-activities/art-club
       - title: Student Leadership
         url: /co-curricular-activities/student-leadership
       - title: The Oasis
