--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -16,9 +16,9 @@ collections:
       - Physical & Health Education/GastroChef With A Cultural Twist.md
       - Physical & Health Education/Values in Action (VIA) in CCA.md
       - Physical & Health Education/Programme for Active Learning (PAL).md
-      - CIE Technology/.keep
-      - CIE Technology/Sustaining Gaia through Project Work.md
-      - CIE Technology/Curriculum, Innovation & Educational Technology.md
+      - CIET/.keep
+      - CIET/Sustaining Gaia through Project Work.md
+      - CIET/Curriculum, Innovation & Educational Technology.md
       - Pupil Well Being/.keep
       - Pupil Well Being/Pupil Well Being.md
       - Pupil Well Being/MOE Sexuality Education in Schools.md
