--- a/_signature-programmes/collection.yml
+++ b/_signature-programmes/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Signature Programmes.md
-      - Love Dance, Love Life!.md
+      - (LLP) Love Dance, Love Life!.md
       - GastroChef With A Cultural Twist.md
       - P1 Transition Programme.md
       - P6 Transition Programme.md
